...
                    <TextView
                        android:visibility="gone"
                        style="@style/style_small_text"
                        android:text="@string/username"/>

                    <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                        android:id="@+id/et_regist_username"
                        style="@style/style_edit"
                        android:layout_marginLeft="0dp"
                        android:textColor="@color/white"
                        android:hint="@string/username_input_hint"
                        android:inputType="textPersonName"
                        app:need_word_byte_limit="true"
...
                            <TextView
                                android:visibility="gone"
                                style="@style/style_small_text"
                                android:text="@string/phone_number"/>

                            <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                                android:id="@+id/et_regist_phone"
                                style="@style/style_edit"
                                android:textColor="@color/white"
                                android:layout_marginLeft="0dp"
                                android:hint="@string/phone_number_input_hint"
                                android:inputType="phone"
                                android:maxLength="@integer/phone_number_length"/>
...
                        android:paddingLeft="@dimen/spacing_mid"
                        android:background="#2D2E30"
                        android:paddingRight="@dimen/spacing_mid"
                        >

                        <TextView
                            android:id="@+id/bt_regist_send_vertify_code"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:background="@null"
...
                    <TextView
                        style="@style/style_small_text"
                        android:visibility="gone"
                        android:text="@string/vertify_code"/>

                    <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                        android:id="@+id/et_regist_vertify_code"
                        style="@style/style_edit"
                        android:textColor="@color/white"
                        android:layout_marginLeft="0dp"
                        android:hint="@string/vertify_code_input_hint"
                        android:inputType="number"
                        android:maxLength="@integer/vertiry_code_lenght" />
                </LinearLayout>

                <ImageView
                    android:layout_marginLeft="10dp"
...
                    <TextView
                        android:visibility="gone"
                        style="@style/style_small_text"
                        android:text="@string/password"/>

                    <com.zhiyicx.baseproject.widget.edittext.PasswordEditText
                        android:id="@+id/et_regist_password"
                        style="@style/style_passward_edit"
                        android:layout_marginLeft="0dp"
                        android:hint="@string/password_input_hint"
                        android:inputType="textPassword"
                        android:maxLength="@integer/password_maxlenght"
                        android:textColor="@color/white" />
...
                    android:padding="0dp"
                    android:text="用户协议"
                    android:layout_marginLeft="16dp"
                    android:textColor="#E73377" />

                <com.zhiyicx.baseproject.widget.button.LoadingButton
                    android:id="@+id/bt_regist_regist"
                    style="@style/style_login_button"
                    android:layout_marginTop="@dimen/button_login_margin_top"
                    android:enabled="false"
                    app:text="@string/regist"/>

                <RelativeLayout
...
