...
    <string name="share_default">本站/App 由 %1$s 提供技术和产品支持，感谢你的使用。</string>


    <!-- 注册 -->
    <string name="regist">注册</string>
    <string name="username_input_hint">用户名不能低于2个中文或4个英文</string>
    <string name="username_toast_hint">@string/username_input_hint</string>
    <string name="username_toast_not_number_start_hint">用户名不能以数字开头</string>
    <string name="username_toast_not_symbol_hint">用户名只能包含数字、字母和下划线</string>
    <string name="immediate_regist">注册</string>
    <string name="vertify_code_input_hint">输入4&#8211;6位验证码</string>
    <string name="phone_number_input_hint">输入11位手机号</string>
    <string name="email_address_input_hint">输入邮箱地址</string>
    <string name="login_account_hint">用户名/手机号/邮箱</string>
    <string name="phone_number_toast_hint">请输入大陆地区合法手机号码</string>
    <string name="email_address_toast_hint">请输入正确的邮箱地址</string>
    <string name="login_account_toast_hint">请输入账号</string>
    <string name="password_input_hint">输入6位以上登录密码</string>
    <string name="password_toast_hint">密码长度不能低于6位</string>
    <string name="old_password_toast_hint">密码长度不能低于6位</string>
    <string name="new_password_toast_hint">密码长度不能低于6位</string>
    <string name="sure_new_password_toast_hint">密码长度不能低于6位</string>
    <string name="password_diffrent">两次密码输入不一致</string>
    <string name="find_password_success">找回密码成功</string>
    <string name="change_password_success">更改成功</string>
...
